--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,8 +3,26 @@ body {
   margin: 0;
 }
 
-#map,
+#mapid,
 body,
 html {
   height: 100%;
+}
+
+.info {
+  padding: 10px 10px;
+  background: white;
+  border-radius: 10px;
+}
+
+.legend {
+  line-height: 18px;
+  color: #555;
+}
+.legend i {
+  width: 30px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
 }
